<resources>
    <string name="app_name">Taskss</string>
    <string name="entering_main">Логин</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="welcome2">Введите свои данные или нажмите продолжить</string>
    <string name="continue_button">Продолжить</string>
    <string name="exitFromAcc">Выйти из аккаунта</string>
    <string name="textProfile">Профиль</string>
    <string name="userName">UserName</string>
    <string name="enterexitacctxt">Войдите в аккаунт</string>
    <string name="chooseCountryCancelButton">Подтвердить выбор</string>
    <string name="chooseCountyEnter">Выбрать страну</string>
    <string name="countryAcc">Country</string>
    <string name="chooseAuto">Выбрать авто</string>
    <string name="flg" />
    <string name="messageTest">Проверка Сообщений</string>
    <string name="carInfoName">POLO</string>
    <string name="fuelPercent">100%</string>
    <string name="fuel">Уровень топлива</string>
    <string name="reservating">Забронировать авто</string>
    <string name="backFromInfo">Назад к списку</string>
    <string name="carNumber">C845OK69</string>
    <string name="share">Поделиться</string>
    <string-array name="Countries">
        <item>Россия</item>
        <item>Белоруссия</item>
        <item>Украина</item>
        <item>Казахстан</item>
        <item>Таджикистан</item>
        <item>Узбекистан</item>
        <item>Азербайджан</item>
        <item>Китай</item>
        <item>Вьетнам</item>
        <item>Финляндия</item>
        <item>Польша</item>
        <item>Чехия</item>
        <item>Германия</item>
        <item>ОАЭ</item>
        <item>Швеция</item>
        <item>Монголия</item>
        <item>Франция</item>
        <item>Италия</item>
        <item>Венгрия</item>
        <item>Англия</item>
    </string-array>
    <string-array name="MarksOfCars">
        <item>Nissan</item>
        <item>Toyota</item>
        <item>Lexus</item>
        <item>BMW</item>
        <item>Audi</item>
        <item>Ford</item>
        <item>Kia</item>
        <item>Skoda</item>
        <item>Volkswagen</item>
        <item>Renault</item>
        <item>Hyundai</item>
        <item>Mazda</item>
        <item>Honda</item>
        <item>Lada</item>
        <item>Mercedes-Benz</item>
        <item>Mitsubishi</item>
        <item>Datsun</item>
        <item>Tesla</item>
        <item>Chevrolet</item>
        <item>Cadillac</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tripCost">Стоимость поездки</string>
    <string name="costReserved">100.0</string>
    <string name="costValRes">Руб.</string>
    <string name="carOpen">Открыть двери</string>
    <string name="carFinish">Завершить аренду</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="enterElMail">Введите эл. почту</string>
    <string name="enterLogin">Введите логин</string>
    <string name="enterPass">Введите пароль</string>
    <string name="enter2Pass">Повторите пароль</string>
    <string name="elMail">Эл. почта</string>
    <string name="downloadLicense">Загрузите фото прав</string>
    <string name="downloadImage">Загрузить фото</string>
    <string name="enterLicenseNum">Введите номер прав</string>
    <string name="enterLicenseType">Выберете тип прав</string>
    <string name="mecanic">Механика</string>
    <string name="licenseNumber">Номер прав</string>
    <string name="birthDate">Дата рождения</string>
    <string name="enterPasportNumber">Введите номер паспорта</string>
    <string name="passportNumber">Номер паспорта</string>
    <string name="enterFIO">Введите ФИО</string>
    <string name="fullName">ФИО</string>
    <string name="enterBirthDate">Введите дату рождения</string>
    <string name="downloadImagePassport">Загрузите фото паспорта</string>
    <string name="buttonDownloadPass">Загрузить фото паспорта</string>
    <string name="map">Карта</string>
    <string name="nearestCars">Ближайшие авто</string>
    <string name="aboutTheApp">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="aboutapp1">Приложение создано в образовательных целях</string>
    <string name="aboutapp2">-------------------------</string>
    <string name="aboutapp3">Создано студентом ИКБО-07-21 Семёновым Владимиром</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="takePhoto">Сделать фото</string>
    <string name="arendEnd">Аренда завершена!</string>
    <string name="total">Итого:</string>
    <string name="totalCost">Итоговая стоимость:</string>
    <string name="countOfPickedPhoto">Кол-во выбранных фото:</string>
    <string name="addCars">Добавить авто</string>
</resources>