<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reservation.ReservedCar" >

    <TextView
        android:id="@+id/carNameReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/carInfoName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carNumberReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp"
        android:text="@string/carNumber"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImageReserved" />

    <TextView
        android:id="@+id/tripCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tripCost"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelReserved" />

    <ImageView
        android:id="@+id/carImageReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNameReserved"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/carOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/carOpen"
        android:backgroundTint="@color/massive_yellow"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/carFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/carFinish"
        android:backgroundTint="@color/aquamarine"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fuelReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:text="@string/fuel"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/carNumberReserved"
        app:layout_constraintTop_toBottomOf="@+id/carImageReserved" />

    <TextView
        android:id="@+id/fuelPersReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:text="@string/fuelPercent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/fuelReserved"
        app:layout_constraintTop_toBottomOf="@+id/carImageReserved" />

    <TextView
        android:id="@+id/costReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="30dp"
        android:text="@string/costReserved"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripCost" />

    <TextView
        android:id="@+id/costValRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:text="@string/costValRes"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/costReserved"
        app:layout_constraintTop_toBottomOf="@+id/tripCost" />

    <Chronometer
        android:id="@+id/travelTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:countDown="false"
        android:format="Время поездки: %s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costReserved" />
</androidx.constraintlayout.widget.ConstraintLayout>